Timeline picture unalignment fixed

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -22,7 +22,7 @@ body,html {
 }
 
 .rightFigure {
-    margin: 10px 0 2px 10px;
+    margin: 10px 10px 2px 0;
 }
 
 figure img {
